# BetterOCR

./: .pdm-python  README.md  pyproject.toml
betterocr/: detect.py
examples/: detect_text.py
